--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GHIBLI STUDIO</title>
+    <title>STUDIO GHIBLI</title>
     <link rel="shortcut icon" href="./img/main/gibrri.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -83,7 +83,7 @@
             <div class="gnb2">
                 <div>
                     <ul class="lb">
-                        <li class="on"><a href="#pg1">Ghibli Studio</a></li>
+                        <li class="on"><a href="#pg1">Studio Ghibli</a></li>
                         <li><a href="#pg2">Movie</a></li>
                     </ul>
                 </div>
@@ -114,13 +114,16 @@
                     <div class="swiper-slide">
                         <div class="parallax-bg m1"></div>
                         <div class="txtWrap">
-                            <div class="title">Slide 1</div>
-                            <div class="subtitle">Subtitle</div>
+                            <div class="title"><img src="img/main/title_spirited_away.png" alt="센과 치히로의 행방불명"></div>
+                            <div class="subtitle">© 2001 Studio Ghibli</div>
                             <div class="text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
+                                    Chihiro thinks she is on another boring trip with her parents. But when they stop at
+                                    a village that is not all that it seems, her parents undergo a mysterious
+                                    transformation, and Chihiro is whisked into a world of fantastic spirits,
+                                    shape-shifting dragons and a witch who never wants to see her leave. She must call
+                                    on the courage she never knew she had to free herself and return her family to the
+                                    outside world.
                                 </p>
                             </div>
                         </div>
@@ -128,13 +131,20 @@
                     <div class="swiper-slide">
                         <div class="parallax-bg m2"></div>
                         <div class="txtWrap">
-                            <div class="title">Slide 2</div>
-                            <div class="subtitle">Subtitle</div>
+                            <div class="title"><img src="img/main/title_howls_moving_castle.png" alt="하울의 움직이는 성"></div>
+                            <div class="subtitle">© 2004 Studio Ghibli</div>
                             <div class="text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
+                                    Sophie, an average teenage girl working in a hat shop, finds her life thrown into
+                                    turmoil when she is literally swept off her feet by a handsome but mysterious wizard
+                                    named Howl. After this chance meeting she is turned into a 90-year old woman by the
+                                    vain and conniving Witch of the Waste. Embarking on an incredible adventure to lift
+                                    the curse, she finds refuge in Howl's magical moving castle where she becomes
+                                    acquainted with Markl, Howl's apprentice, and a hot-headed fire demon named
+                                    Calcifer.<br>
+                                    As the true power of Howl’s wizardry is revealed, and his relationship with Sophie
+                                    deepens, our young grey heroine finds herself fighting to protect them both from a
+                                    dangerous war of sorcery that threatens their world.
                                 </p>
                             </div>
                         </div>
@@ -142,13 +152,159 @@
                     <div class="swiper-slide">
                         <div class="parallax-bg m3"></div>
                         <div class="txtWrap">
-                            <div class="title">Slide 3</div>
-                            <div class="subtitle">Subtitle</div>
+                            <div class="title"><img src="img/main/title_princess_mononoke.png" alt="모노노케 히메"></div>
+                            <div class="subtitle">© 1997 Studio Ghibli</div>
                             <div class="text">
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam
-                                    dictum mattis velit, sit amet faucibus felis iaculis nec. Nulla
-                                    laoreet justo vitae porttitor porttitor. Suspendisse in sem justo.
+                                    While protecting his village from a rampaging boar-god, the young warrior Ashitaka
+                                    becomes afflicted with a deadly curse. To find the cure that will save his life, he
+                                    journeys deep into sacred depths of the Great Forest Spirit's realm where he meets
+                                    San (Princess Mononoke), a girl raised by wolves. It's not long before Ashitaka is
+                                    caught in the middle of a battle between iron-ore prospecting humans and the forest
+                                    dwellers. He must summon the spirit-powers and all his courage to stop man and
+                                    nature from destroying each other.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m4"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_ocean_waves.png" alt="바다가 들린다"></div>
+                            <div class="subtitle">© 1993 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    Kochi is your average coastal town on the sleepy, idyllic island of Shikoku and
+                                    young Taku is definitely your average high school student. But soon his quiet life
+                                    will be turned upside down with the arrival of Rikako: a beautiful student recently
+                                    transferred from Tokyo. By the end of the term Taku will have learnt a valuable
+                                    lesson in love and friendship.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m5"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_laputa.png" alt="천공의 성 라퓨타"></div>
+                            <div class="subtitle">© 1986 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    Kochi is your average coastal town on the sleepy, idyllic island of Shikoku and
+                                    young Taku is definitely your average high school student. But soon his quiet life
+                                    will be turned upside down with the arrival of Rikako: a beautiful student recently
+                                    transferred from Tokyo. By the end of the term Taku will have learnt a valuable
+                                    lesson in love and friendship.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m6"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_kikis_delivery_service.png" alt="마녀배달부 키키">
+                            </div>
+                            <div class="subtitle">© 2017 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    It is tradition for all young witches to leave their families on the night of a full
+                                    moon to learn their craft. That night comes for Kiki, who follows her dream and
+                                    embarks on the experience of a lifetime.
+
+                                    With her chatty black cat, Jiji, she flies off to find the perfect spot in a faraway
+                                    city. There, a bakery owner befriends Kiki and helps her start her own business: A
+                                    high-flying delivery service.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m7"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_porco_rosso.png" alt="붉은돼지"></div>
+                            <div class="subtitle">© 1992 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    World War I has ended, and peace reigns again. Aviators from around the world circle
+                                    above the Adriatic Sea, keen to recapture the romanticism of flight lost during the
+                                    war. Many have turned to air piracy, in amongst which a hero emerges: a man with a
+                                    pig's head, known as Porco Rosso (once an Italian air force pilot called Marco
+                                    Paggot).<br>
+                                    As mercenary law-enforcer of the skies and oceans, Porco Rosso protects cruise ships
+                                    from the air pirates above them. When his actions are challenged by Curtis, an
+                                    American who flies with the pirates, Porco Rosso is forced to defend his honour
+                                    against this newcomer, which leads him to Fio, a feisty young engineer who rebuilds
+                                    Porco's plane for the big dogfight.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m8"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_totoro.png" alt="이웃집 토토로"></div>
+                            <div class="subtitle">© 1988 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    Two young girls, Satsuki and Mei, have moved with their father into a new home in
+                                    the country, while their mother recovers from illness in a nearby hospital. To their
+                                    surprise, they soon discover that they share this home with some rather unusual
+                                    creatures and even stranger neighbours - forest guardians that the girls dub Totoro.
+                                    When trouble occurs, their new friends will help them rediscover hope.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m9"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_from_up_on_poppy_hill.png" alt="코쿠리코 언덕에서">
+                            </div>
+                            <div class="subtitle">© 2017 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    Set in Yokohama, From Up On Poppy Hill is a high school love story that take place
+                                    in the year before the 1964 Tokyo Summer Olympics. As the country begins to pick
+                                    itself up from the devastation of the Second World War, the new generation struggles
+                                    to move towards a prosperous future whilst trying not to lose the essence of their
+                                    past. The film's rich and vibrant animation captures the entrancing beauty of
+                                    Yokohama's harbour and lush surrounding hillsides and, with a soundtrack that draws
+                                    inspiration from the finest music of the time, perfectly captures the thrills of
+                                    young romance and the hope of a new dawn.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m10"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_the_wind_rises.png" alt="바람이 분다"></div>
+                            <div class="subtitle">© 2013 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    Jiro dreams of flying and designing beautiful airplanes, inspired by the famous
+                                    Italian aeronautical designer Caproni. Nearsighted and unable to be a pilot, he
+                                    becomes one of the world's most accomplished airplane designers, experiencing key
+                                    historical events in an epic tale of love, perseverance and the challenges of living
+                                    and making choices in a turbulent world.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="swiper-slide">
+                        <div class="parallax-bg m11"></div>
+                        <div class="txtWrap">
+                            <div class="title"><img src="img/main/title_when_marnie_was_there.png" alt="추억의 마니"></div>
+                            <div class="subtitle">© 2014 Studio Ghibli</div>
+                            <div class="text">
+                                <p>
+                                    Twelve year old Anna believes she sits outside the invisible magic circle to which
+                                    most people belong, and shuts herself off from everyone around her.<br>
+                                    Concerned for her health, Anna’s foster mother decides to send her to rural Hokkaido
+                                    to stay in a sleepy town by the sea. As she dreams her days away amongst the
+                                    marshes, Anna finds herself strangely drawn to the enigmatic house which sits upon
+                                    the edge there. This is where she meets Marnie, an energetic young girl who seems to
+                                    appear from nowhere. The pair quickly become inseparable.
                                 </p>
                             </div>
                         </div>
@@ -160,11 +316,43 @@
             </div>
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
-        <div id="cont">
-            <section id="pg1" class="cont2">
+        <section id="pg1" class="cont2">
+            <div class="info">
+                <h1 class="tit1">&nbsp;Studio Ghibli&nbsp;</h1>
+                <h2 class="tit2">Hayao Miyazaki’s masterpiece returns to cinemas for a limited time in celebration of
+                    its 25th Anniversary.</h2>
+                <p class="tit3">Studio Ghibli is a Japanese animation studio based in Koganei, Tokyo. It has a strong
+                    presence in the
+                    animation industry and has expanded its portfolio to include various media formats, such as short
+                    subjects, television commercials, and two television films. Their work has been well-received by
+                    audiences and recognized with numerous awards. Their mascot and most recognizable symbol, the
+                    character Totoro from the 1988 film My Neighbor Totoro, is a giant spirit inspired by raccoon dogs
+                    (tanuki) and cats (neko). Among the studio's highest-grossing films are Spirited Away (2001),
+                    Howl's Moving Castle (2004), and Ponyo (2008). Studio Ghibli was founded on June 15, 1985, by the
+                    directors Hayao Miyazaki and Isao Takahata and producer Toshio Suzuki, after acquiring Topcraft's
+                    assets.<br><br>
+                </p>
+                <a href="#">Buy Cinema Tickets</a>
+                <div class="ghiimg"><a href="#"><img src="img/main/ghibli_logo_gold.png" alt="지브리스튜디오골드색"></a></div>
+            </div>
+            <div class="info">
+                <h1 class="tit1">&nbsp;Celebrating 25 years of Princess Mononoke&nbsp;</h1>
+                <h2 class="tit2">Hayao Miyazaki’s masterpiece returns to cinemas for a limited time in celebration of
+                    its 25th Anniversary.</h2>
+                <p class="tit3">In the 14th century, the harmony that humans, animals and gods have enjoyed begins to
+                    crumble. The protagonist, young Ashitaka – infected by an animal attack, seeks a cure from the
+                    deer-like god Shishigami. In his travels, he sees humans ravaging the earth, bringing down the wrath
+                    of wolf god Moro and his human companion Princess Mononoke. Hiskattempts to broker peace between her
+                    and the humans brings only conflict.<br><br>
 
-            </section>
-        </div>
+                    In cinemas from July 14 for a strictly limited season</p>
+                <a href="#">Buy Cinema Tickets</a>
+            </div>
+
+            <div class="shop">
+
+            </div>
+        </section>
     </div>
     <script src="./JS/main.js"></script>
 </body>
