--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -316,11 +316,9 @@
             </div>
         </section>
         <!-- /******************************************* cont2 *******************************************/ -->
-        <section id="pg1" class="cont2">
+        <section id="pg1" class="cont cont2">
             <div class="info">
                 <h1 class="tit1">&nbsp;Studio Ghibli&nbsp;</h1>
-                <h2 class="tit2">Hayao Miyazaki’s masterpiece returns to cinemas for a limited time in celebration of
-                    its 25th Anniversary.</h2>
                 <p class="tit3">Studio Ghibli is a Japanese animation studio based in Koganei, Tokyo. It has a strong
                     presence in the
                     animation industry and has expanded its portfolio to include various media formats, such as short
@@ -332,8 +330,7 @@
                     directors Hayao Miyazaki and Isao Takahata and producer Toshio Suzuki, after acquiring Topcraft's
                     assets.<br><br>
                 </p>
-                <a href="#">Buy Cinema Tickets</a>
-                <div class="ghiimg"><a href="#"><img src="img/main/ghibli_logo_gold.png" alt="지브리스튜디오골드색"></a></div>
+                <a href="#" class="logoGold"><img src="img/main/ghibli_logo_gold.png" alt="지브리스튜디오골드색"></a>
             </div>
             <div class="info">
                 <h1 class="tit1">&nbsp;Celebrating 25 years of Princess Mononoke&nbsp;</h1>
@@ -346,11 +343,34 @@
                     and the humans brings only conflict.<br><br>
 
                     In cinemas from July 14 for a strictly limited season</p>
-                <a href="#">Buy Cinema Tickets</a>
+                <a href="#" class="ticket">Buy Cinema Tickets</a>
             </div>
-
-            <div class="shop">
-
+        </section>
+        <!-- /******************************************* cont3 *******************************************/ -->
+        <section id="pg2" class="cont cont3">
+            <div class="movie">
+                <h1 class="moviet">&nbsp;MOVIE&nbsp;</h1>
+                <div class="list">
+                    <div class="poster"><a href="#"><img src="img/main/poster_away.jpeg" alt="센과 치히로의 행방불명"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_howls.jpeg" alt="하울의 움직이는 성"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_mononoke.jpg" alt="원령공주"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_kiki.jpg" alt="마녀배달부 키키"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_laputa.jpg" alt="천공의 성 라퓨타"></a></div>
+                </div>
+                <div class="list">
+                    <div class="poster"><a href="#"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_porco.jpg" alt="붉은돼지"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_cat.jpg" alt="고양이의 보은"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_arrietty.jpg" alt="아리에티"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_kokuriko.jpg" alt="코쿠리코 언덕에서"></a></div>
+                </div>
+                <div class="list">
+                    <div class="poster"><a href="#"><img src="img/main/poster_ponyo.jpg" alt="포뇨"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_totoro.jpg" alt="이웃집 토토로"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_wind_rises.jpg" alt="바람이 들린다"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_marie.jpg" alt="마리"></a></div>
+                    <div class="poster"><a href="#"><img src="img/main/poster_nausicaa.jpg" alt="나우시카"></a></div>
+                </div>
             </div>
         </section>
     </div>
