--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -343,7 +343,7 @@
                     and the humans brings only conflict.<br><br>
 
                     In cinemas from July 14 for a strictly limited season</p>
-                <a href="#" class="ticket">Buy Cinema Tickets</a>
+                <a href="#" class="ticket btn">Buy Cinema Tickets</a>
             </div>
         </section>
         <!-- /******************************************* cont3 *******************************************/ -->
@@ -371,8 +371,48 @@
                     <div class="poster"><a href="#"><img src="img/main/poster_marie.jpg" alt="마리"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_nausicaa.jpg" alt="나우시카"></a></div>
                 </div>
+                <a href="#" class="moremovie btn">More</a>
             </div>
         </section>
+
+        <section id="pg3" class="cont cont4">
+            <div class="ost">
+                <h1 class="ostT">&nbsp;OST&nbsp;</h1>
+                <div class="swiper ostSwiper">
+                    <div class="swiper-wrapper">
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_ghi.jpeg">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_away.jpg">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_howl.jpeg">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_kiki.webp">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_laputa.jpeg">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_nausicaa.jpg">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_porco.jpeg">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_mononoke.webp">
+                      </div>
+                      <div class="swiper-slide">
+                        <img src="img/main/mp_totoro.jpeg">
+                      </div>
+                    </div>
+                    <!-- <div class="swiper-pagination"></div> -->
+                  </div>
+            </div>
+        </section>
+
     </div>
     <script src="./JS/main.js"></script>
 </body>
