--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -358,7 +358,7 @@
                     <div class="poster"><a href="#"><img src="img/main/poster_laputa.jpg" alt="천공의 성 라퓨타"></a></div>
                 </div>
                 <div class="list">
-                    <div class="poster"><a href="#"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a></div>
+                    <div class="poster"><a href="ocean.html"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_porco.jpg" alt="붉은돼지"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_cat.jpg" alt="고양이의 보은"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_arrietty.jpg" alt="아리에티"></a></div>
