--- a/001.HTML/013.ghibli_PJ/ocean.html
+++ b/001.HTML/013.ghibli_PJ/ocean.html
@@ -99,7 +99,7 @@
                     <div id="wave-animation" class="wave-animation"></div>
                 </div>
                 <p class="audiotxt" onclick="toggleAudio()">BGM Play!</p>
-                <audio id="bgm" autoplay loop onloadstart="this.volume=0.3" src="./mp3/ocean_waves.mp3">
+                <audio id="bgm" loop onloadstart="this.volume=0.3" src="./mp3/ocean_waves.mp3">
                     Your browser does not support the audio element.
                     이 브라우저에서는 오디오가 지원되지 않습니다.</audio>
             </div>
