--- a/001.HTML/013.ghibli_PJ/index.html
+++ b/001.HTML/013.ghibli_PJ/index.html
@@ -7,8 +7,10 @@
     <title>STUDIO GHIBLI</title>
     <link rel="shortcut icon" href="./img/main/gibrri.png" type="image/x-icon">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
     <link rel="stylesheet" href="css/common.css">
 
 </head>
@@ -333,7 +335,7 @@
                     directors Hayao Miyazaki and Isao Takahata and producer Toshio Suzuki, after acquiring Topcraft's
                     assets.<br><br>
                 </p>
-                <a href="#" class="logoGold"><img src="img/main/ghibli_logo_gold.png" alt="지브리스튜디오골드색"></a>
+                <a href="#" class="logoGold wow animate__animated animate__fadeInRight" data-wow-duration=".8s" data-wow-delay=".2s" data-wow-offset="200"><img src="img/main/ghibli_logo_gold.png" alt="지브리스튜디오골드색"></a>
             </div>
             <div class="info">
                 <h1 class="tit1 afbf">&nbsp;Celebrating 25 years of Princess Mononoke&nbsp;</h1>
@@ -351,6 +353,12 @@
         </section>
         <!-- /******************************************* cont3 *******************************************/ -->
         <section id="pg2" class="cont cont3">
+            <div class="kuro kuro1 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300">
+                <img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro2 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro3 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro4 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
+            <div class="kuro kuro5 wow animate__animated animate__bounceInDown" data-wow-duration="1.5s" data-wow-delay=".3s" data-wow-offset="300"><img src="img/main/kuro02.svg" alt="쿠로"></div>
             <div class="movie">
                 <h1 class="moviet afbf">&nbsp;MOVIE&nbsp;</h1>
                 <div class="list">
@@ -361,7 +369,8 @@
                     <div class="poster"><a href="#"><img src="img/main/poster_laputa.jpg" alt="천공의 성 라퓨타"></a></div>
                 </div>
                 <div class="list">
-                    <div class="poster"><a href="ocean.html"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a></div>
+                    <div class="poster"><a href="ocean.html"><img src="img/main/poster_ocean.jpg" alt="바다가들린다"></a>
+                    </div>
                     <div class="poster"><a href="#"><img src="img/main/poster_porco.jpg" alt="붉은돼지"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_cat.jpg" alt="고양이의 보은"></a></div>
                     <div class="poster"><a href="#"><img src="img/main/poster_arrietty.jpg" alt="아리에티"></a></div>
@@ -385,37 +394,37 @@
                 <h1 class="ostT afbf">&nbsp;OST&nbsp;</h1>
                 <div class="swiper ostSwiper">
                     <div class="swiper-wrapper">
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_ghi.jpeg">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_away.jpg">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_howl.jpeg">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_kiki.webp">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_laputa.jpeg">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_nausicaa.jpg">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_porco.jpeg">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_mononoke.webp">
-                      </div>
-                      <div class="swiper-slide">
-                        <img src="img/main/mp_totoro.jpeg">
-                      </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_ghi.jpeg">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_away.jpg">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_howl.jpeg">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_kiki.webp">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_laputa.jpeg">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_nausicaa.jpg">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_porco.jpeg">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_mononoke.webp">
+                        </div>
+                        <div class="swiper-slide">
+                            <img src="img/main/mp_totoro.jpeg">
+                        </div>
                     </div>
-                    <!-- <div class="swiper-pagination"></div> -->
-                  </div>
+                </div>
             </div>
+            <img src="img/main/totorun.png" alt="토토로" class="totorun wow animate__animated animate__fadeOutLeftBig" data-wow-duration="13s" data-wow-delay=".5s" data-wow-offset="300">
         </section>
     </div>
     <footer id="pg4" class="footer">
@@ -431,8 +440,7 @@
             </div>
         </div>
         <div id="footer">
-            <a href="#"><abbr title="지브리 공식홈페이지"><img class="ghibli" src="img/main/ghibli_logo_white-1.png"
-                alt="지브리로고"></abbr></a>
+            <a href="#"><abbr title="지브리 공식홈페이지"><img class="ghibli" src="img/main/ghibli_logo_white-1.png" alt="지브리로고"></abbr></a>
         </div>
     </footer>
     <script src="./JS/main.js"></script>
